# copier-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  copier.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
copier/: jinja_extensions.py  settings.yml
copier/extensions/: context.py  version.py
copier/questions/: copyright.yml  features.yml
template/: .gitignore  .pre-commit-config.yaml  Makefile  Makefile.jinja  README.md.jinja  justfile  pyproject.toml.jinja  {% if with_pyinstaller %}{{ project_name }}.spec{% endif %}.jinja
template/.github/workflows/: ci.yml.jinja  test.yml.jinja
template/src/{{ project_package }}/: {% if with_cli %}cli.py{% endif %}.jinja
template/src/{{project_package}}/: {% if with_cli %}__cli__.py{% endif %}.jinja  {% if with_cli %}__main__.py{% endif %}.jinja
template/tests/: test_version.py.jinja  {% if with_cli %}test_cli.py{% endif %}.jinja
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_pyproject.py  test_static.py  test_template.py  test_tests_cli.py
